# dots-game

./: README.md  dots-game.cabal  stack.yaml
client/: Main.hs
server/: Main.hs
server/Dots/: Server.hs
src/: Dots.hs
