name:                dots-game
version:             0.1
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/fizruk/dots-game#readme
license:             BSD3
license-file:        LICENSE
author:              Nickolay Kudasov
maintainer:          nickolay.kudasov@gmail.com
copyright:           (c) 2016 Nickolay Kudasov
category:            Web
build-type:          Simple
extra-source-files:
  README.md
  images/*.png
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Dots
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , gloss
                     , websockets
  default-language:    Haskell2010

executable dots-game-client
  hs-source-dirs:      client
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , dots-game
                     , gloss
                     , stm
                     , websockets
  default-language:    Haskell2010

executable dots-game-server
  hs-source-dirs:      server
  main-is:             Main.hs
  other-modules:
    Dots.Server
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , dots-game
                     , http-types
                     , servant
                     , servant-server
                     , stm
                     , wai
                     , wai-websockets
                     , warp
                     , websockets
  default-language:    Haskell2010

test-suite dots-game-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , dots-game
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/fizruk/dots-game
